# airflow-provider-fivetran

./: .gitignore  CHANGELOG.md  LICENSE.md  README.md  makefile  setup.cfg  setup.py
airflow-provider-fivetran/examples/: example_fivetran_dag.py
airflow-provider-fivetran/operators/: fivetran.py
airflow_provider_fivetran/: __init__.py
airflow_provider_fivetran/example_dags/: ad_reporting_dag.py  example_fivetran.py
airflow_provider_fivetran/examples/: ad_reporting_dag.py  example_fivetran.py
airflow_provider_fivetran/hooks/: fivetran.py
airflow_provider_fivetran/operators/: fivetran.py
airflow_provider_fivetran/sensors/: fivetran.py
fivetran_provider/: __init__.py
fivetran_provider/example_dags/: example_fivetran.py  example_fivetran_bigquery.py  example_fivetran_bqml.py  example_fivetran_dbt.py  example_fivetran_xcom.py
fivetran_provider/examples/: example_fivetran.py
fivetran_provider/hooks/: .fivetran.py.swp  fivetran.py
fivetran_provider/operators/: fivetran.py
fivetran_provider/sensors/: fivetran.py
test/hooks/: test_hooks.py
test/operators/: test_operators.py
test/sensors/: test_sensors.py
tests/hooks/: test_hooks.py
tests/operators/: test_operators.py
tests/sensors/: test_sensors.py
