[metadata]
name = airflow-provider-fivetran
version = 0.0.1
description = A Fivetran provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

author = Fivetran Developer Relations
author_email = devrel@fivetran.com
url = https://github.com/fivetran/airflow-provider-fivetran
project_urls =
    Bug Tracker = https://github.com/fivetran/airflow-provider-fivetran/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    apache-airflow >= 1.10
