[metadata]
name = airflow-provider-fivetran
version = 1.1.3
description = A Fivetran provider for Apache Airflow
long_description = file: README.md
long_description_content_type = text/markdown
license = Apache License 2.0
classifiers =
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

author = Fivetran
author_email = devrel@fivetran.com
url = https://github.com/fivetran/airflow-provider-fivetran
project_urls =
    Bug Tracker = https://github.com/fivetran/airflow-provider-fivetran/issues

[options]
packages = find:
python_requires = >=3.6
install_requires =
    requests
    apache-airflow >= 1.10

[options.entry_points]
# the function get_provider_info is defined in myproviderpackage.somemodule 
apache_airflow_provider=
  provider_info=fivetran_provider.__init__:get_provider_info

